--- a/DOML.net/Test/BenchmarkDotNet.Artifacts/results/AllTests-report.html
+++ b/DOML.net/Test/BenchmarkDotNet.Artifacts/results/AllTests-report.html
@@ -17,7 +17,7 @@ BenchmarkDotNet=v0.10.9, OS=Windows 10 Redstone 2 (10.0.15063)
 Processor=Intel Core i5-4590 CPU 3.30GHz (Haswell), ProcessorCount=4
 Frequency=3222661 Hz, Resolution=310.3026 ns, Timer=TSC
 .NET Core SDK=1.1.0
-  [Host]     : .NET Core 1.1.2 (Framework 4.6.25211.01), 64bit RyuJIT  [AttachedDebugger]
+  [Host]     : .NET Core 1.1.2 (Framework 4.6.25211.01), 64bit RyuJIT DEBUG  [AttachedDebugger]
   DefaultJob : .NET Core 1.1.2 (Framework 4.6.25211.01), 64bit RyuJIT
 </code></pre>
 <pre><code></code></pre>
@@ -25,8 +25,8 @@ Frequency=3222661 Hz, Resolution=310.3026 ns, Timer=TSC
 <table>
 <thead><tr><th>  Method</th><th>Mean</th><th>Error</th><th>StdDev</th>
 </tr>
-</thead><tbody><tr><td>ReadIRComments</td><td>1.763 us</td><td>0.0119 us</td><td>0.0111 us</td>
-</tr><tr><td>  ReadIR</td><td>1.041 us</td><td>0.0072 us</td><td>0.0068 us</td>
+</thead><tbody><tr><td>ReadIRComments</td><td>28.24 us</td><td>0.3603 us</td><td>0.3370 us</td>
+</tr><tr><td>  ReadIR</td><td>12.07 us</td><td>0.0480 us</td><td>0.0400 us</td>
 </tr></tbody></table>
 </body>
 </html>
