--- a/DOML.net/Test/BenchmarkDotNet.Artifacts/results/AllTests-report.html
+++ b/DOML.net/Test/BenchmarkDotNet.Artifacts/results/AllTests-report.html
@@ -15,18 +15,24 @@
 <pre><code>
 BenchmarkDotNet=v0.10.9, OS=Windows 10 Redstone 2 (10.0.15063)
 Processor=Intel Core i5-4590 CPU 3.30GHz (Haswell), ProcessorCount=4
-Frequency=3222661 Hz, Resolution=310.3026 ns, Timer=TSC
+Frequency=3222670 Hz, Resolution=310.3017 ns, Timer=TSC
 .NET Core SDK=1.1.0
-  [Host]     : .NET Core 1.1.2 (Framework 4.6.25211.01), 64bit RyuJIT DEBUG  [AttachedDebugger]
+  [Host]     : .NET Core 1.1.2 (Framework 4.6.25211.01), 64bit RyuJIT  [AttachedDebugger]
   DefaultJob : .NET Core 1.1.2 (Framework 4.6.25211.01), 64bit RyuJIT
 </code></pre>
 <pre><code></code></pre>
 
 <table>
-<thead><tr><th>  Method</th><th>Mean</th><th>Error</th><th>StdDev</th>
+<thead><tr><th>Method</th><th>WithCondition</th><th>Mean</th><th>Error</th><th>StdDev</th>
 </tr>
-</thead><tbody><tr><td>ReadIRComments</td><td>28.24 us</td><td>0.3603 us</td><td>0.3370 us</td>
-</tr><tr><td>  ReadIR</td><td>12.07 us</td><td>0.0480 us</td><td>0.0400 us</td>
+</thead><tbody><tr><td>ParseTest</td><td>  False</td><td>17.603 us</td><td>0.0734 us</td><td>0.0686 us</td>
+</tr><tr><td>EmitTest</td><td>  False</td><td>18.825 us</td><td>0.1647 us</td><td>0.1540 us</td>
+</tr><tr><td>ExecuteTest</td><td>  False</td><td>2.346 us</td><td>0.0098 us</td><td>0.0091 us</td>
+</tr><tr><td>ReadIR</td><td>  False</td><td>7.329 us</td><td>0.0214 us</td><td>0.0200 us</td>
+</tr><tr><td>ParseTest</td><td>   True</td><td>17.598 us</td><td>0.1138 us</td><td>0.1064 us</td>
+</tr><tr><td>EmitTest</td><td>   True</td><td>54.359 us</td><td>0.5333 us</td><td>0.4989 us</td>
+</tr><tr><td>ExecuteTest</td><td>   True</td><td>3.600 us</td><td>0.0200 us</td><td>0.0177 us</td>
+</tr><tr><td>ReadIR</td><td>   True</td><td>5.798 us</td><td>0.1063 us</td><td>0.0994 us</td>
 </tr></tbody></table>
 </body>
 </html>
